# bizgraph

./: .gitignore  AGENTS.md  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml
docs/context/: api.md  architecture.md  conventions.md  deploy.md  modules.md  tech-stack.md
docs/plantree/: README.md
docs/plantree/baseline/: README.md  runtime-flows.md
docs/plantree/ideas/: inbox.md
docs/plantree/plans/custom-error-type/: README.md  implementation-status.md  roadmap.md
docs/review/: api-design.md  architecture.md  code-quality.md  error-handling.md  infra.md  network-resilience.md  runtime-health.md  summary.md  testing.md
src/: ai.rs  db.rs  error.rs  graph.rs  lib.rs  main.rs  parser.rs  server.rs  types.rs
src/ai/: agent.rs  business.rs  chat.rs  mod.rs  prompts.rs  summarization.rs
