[package]
name = "bizgraph"
version = "0.1.0"
edition = "2021"
description = "Turn Yakit Excel traffic into a deterministic business graph"
license = "MIT"
repository = "https://github.com/trtyr/bizgraph"
keywords = ["pentesting", "security", "traffic-analysis", "business-graph"]

[lib]
name = "bizgraph"
path = "src/lib.rs"

[[bin]]
name = "bizgraph"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
calamine = "0.26"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "v5", "serde"] }
