[package]
name = "bizgraph"
version = "0.2.1"
edition = "2021"
description = "Turn HAR traffic captures into a deterministic business graph"
license = "MIT"
repository = "https://github.com/trtyr/bizgraph"
keywords = ["pentesting", "security", "traffic-analysis", "business-graph"]

[lib]
name = "bizgraph"
path = "src/lib.rs"

[[bin]]
name = "bizgraph"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
url = "2"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
